tests/baselines/reference/autoAccessorDisallowedModifiers(target=esnext).errors.txt
autoAccessorDisallowedModifiers.ts(2,14): error TS1030: 'accessor' modifier already seen.
autoAccessorDisallowedModifiers.ts(3,14): error TS1243: 'accessor' modifier cannot be used with 'readonly' modifier.
autoAccessorDisallowedModifiers.ts(4,13): error TS1243: 'accessor' modifier cannot be used with 'declare' modifier.
autoAccessorDisallowedModifiers.ts(5,14): error TS1029: 'public' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(6,14): error TS1029: 'private' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(7,14): error TS1029: 'protected' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(8,14): error TS1029: 'abstract' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(9,14): error TS1029: 'static' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(10,5): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(11,5): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(12,5): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(13,5): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(14,15): error TS1276: An 'accessor' property cannot be declared optional.
autoAccessorDisallowedModifiers.ts(15,14): error TS1243: 'readonly' modifier cannot be used with 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(16,14): error TS1243: 'declare' modifier cannot be used with 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(20,14): error TS1029: 'override' modifier must precede 'accessor' modifier.
autoAccessorDisallowedModifiers.ts(24,5): error TS1070: 'accessor' modifier cannot appear on a type member.
autoAccessorDisallowedModifiers.ts(27,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(28,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(29,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(30,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(31,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(32,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(33,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(34,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(35,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(35,25): error TS2792: Cannot find module 'x'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
autoAccessorDisallowedModifiers.ts(36,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(37,1): error TS1275: 'accessor' modifier can only appear on a property declaration.
autoAccessorDisallowedModifiers.ts(38,1): error TS1275: 'accessor' modifier can only appear on a property declaration.


==== autoAccessorDisallowedModifiers.ts (30 errors) ====
    abstract class C1 {
        accessor accessor a: any;
                 ~~~~~~~~
!!! error TS1030: 'accessor' modifier already seen.
        readonly accessor b: any;
                 ~~~~~~~~
!!! error TS1243: 'accessor' modifier cannot be used with 'readonly' modifier.
        declare accessor c: any;
                ~~~~~~~~
!!! error TS1243: 'accessor' modifier cannot be used with 'declare' modifier.
        accessor public d: any;
                 ~~~~~~
!!! error TS1029: 'public' modifier must precede 'accessor' modifier.
        accessor private e: any;
                 ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'accessor' modifier.
        accessor protected f: any;
                 ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'accessor' modifier.
        accessor abstract g: any;
                 ~~~~~~~~
!!! error TS1029: 'abstract' modifier must precede 'accessor' modifier.
        accessor static h: any;
                 ~~~~~~
!!! error TS1029: 'static' modifier must precede 'accessor' modifier.
        accessor i() {}
        ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
        accessor get j() { return false; }
        ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
        accessor set k(v: any) {}
        ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
        accessor constructor() {}
        ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
        accessor l?: any;
                  ~
!!! error TS1276: An 'accessor' property cannot be declared optional.
        accessor readonly m: any;
                 ~~~~~~~~
!!! error TS1243: 'readonly' modifier cannot be used with 'accessor' modifier.
        accessor declare n: any;
                 ~~~~~~~
!!! error TS1243: 'declare' modifier cannot be used with 'accessor' modifier.
    }
    
    class C2 extends C1 {
        accessor override g: any;
                 ~~~~~~~~
!!! error TS1029: 'override' modifier must precede 'accessor' modifier.
    }
    
    interface I1 {
        accessor a: number;
        ~~~~~~~~
!!! error TS1070: 'accessor' modifier cannot appear on a type member.
    }
    
    accessor class C3 {}
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor interface I2 {}
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor namespace N1 {}
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor enum E1 {}
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor var V1: any;
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor type T1 = never;
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor function F1() {}
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor import "x";
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor import {} from "x";
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
                            ~~~
!!! error TS2792: Cannot find module 'x'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    accessor export { V1 };
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor export default V1;
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    accessor import N2 = N1;
    ~~~~~~~~
!!! error TS1275: 'accessor' modifier can only appear on a property declaration.
    